<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:fillViewport="true"
    android:orientation="vertical"
    android:id="@+id/scrollView"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular_life_expert"
        android:layout_marginStart="16dp"
        android:paddingTop="16dp"
        android:layout_marginBottom="8dp"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/life_expert_list"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latest_update"
        android:layout_marginStart="16dp"
        android:paddingTop="16dp"
        android:layout_marginBottom="8dp"
        />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:cardCornerRadius="2dp"
        >
        <ImageView
            android:id="@+id/iv_latest_update"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/cover3"
            android:scaleType="fitXY"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:background="#66666666"
            >
            <TextView
                android:id="@+id/tv_latest_update_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vol.453"
                android:textColor="@android:color/white"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                />

            <TextView
                android:id="@+id/tv_latest_update_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="工作便当日"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_below="@id/tv_latest_update_no"
                />

            <TextView
                android:id="@+id/tv_latest_update_collected_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:textColor="@android:color/white"
                android:text="8493"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                />
            <TextView
                android:id="@+id/tv_collect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_toLeftOf="@id/tv_latest_update_collected_num"
                android:text="@string/collected"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="3dp"
                />

            <TextView
                android:id="@+id/tv_read_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="5dp"
                android:textColor="@android:color/white"
                android:layout_toLeftOf="@id/tv_collect"
                android:text="4.8万"
                />

            <TextView
                android:id="@+id/tv_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="3dp"
                android:textColor="@android:color/white"
                android:layout_toLeftOf="@id/tv_read_num"
                android:text="@string/read"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_research_institute"
            android:layout_marginStart="16dp"
            android:paddingTop="16dp"
            android:layout_marginBottom="8dp"
            />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:cardCornerRadius="2dp"
            android:layout_marginBottom="16dp"
            >
            <ImageView
                android:id="@+id/iv_selected_research_institute_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/cover2"
                android:scaleType="fitXY"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="bottom"
                android:background="#66666666"
                >
                <TextView
                    android:id="@+id/tv_selected_research_institute_1_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Vol.453"
                    android:textColor="@android:color/white"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    />

                <TextView
                    android:id="@+id/tv_selected_research_institute_1_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="工作之余"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:layout_below="@id/tv_selected_research_institute_1_no"
                    />

                <TextView
                    android:id="@+id/tv_selected_research_institute_1_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:textColor="@android:color/white"
                    android:text="8493"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    />
                <TextView
                    android:id="@+id/tv_collect_selected_research_institute_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:layout_toLeftOf="@id/tv_selected_research_institute_1_num"
                    android:text="@string/collected"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="3dp"
                    />

                <TextView
                    android:id="@+id/tv_selected_research_institute_1_read_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="5dp"
                    android:textColor="@android:color/white"
                    android:layout_toLeftOf="@id/tv_collect_selected_research_institute_1"
                    android:text="4.8万"
                    />

                <TextView
                    android:id="@+id/tv_selected_research_institute_1_read"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="3dp"
                    android:textColor="@android:color/white"
                    android:layout_toLeftOf="@id/tv_selected_research_institute_1_read_num"
                    android:text="@string/read"
                    />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:cardCornerRadius="2dp"
            >
            <ImageView
                android:id="@+id/iv_selected_research_institute_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/cover1"
                android:scaleType="fitXY"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="bottom"
                android:background="#66666666"
                >
                <TextView
                    android:id="@+id/tv_selected_research_institute_2_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Vol.453"
                    android:textColor="@android:color/white"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    />

                <TextView
                    android:id="@+id/tv_selected_research_institute_2_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:layout_marginStart="16dp"
                    android:text="工作之余"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:layout_below="@id/tv_selected_research_institute_2_no"
                    />

                <TextView
                    android:id="@+id/tv_selected_research_institute_2_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:textColor="@android:color/white"
                    android:text="8493"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    />
                <TextView
                    android:id="@+id/tv_collect_selected_research_institute_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:layout_toLeftOf="@id/tv_selected_research_institute_2_num"
                    android:text="@string/collected"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="3dp"
                    />

                <TextView
                    android:id="@+id/tv_selected_research_institute_2_read_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="5dp"
                    android:textColor="@android:color/white"
                    android:layout_toLeftOf="@id/tv_collect_selected_research_institute_2"
                    android:text="4.8万"
                    />

                <TextView
                    android:id="@+id/tv_selected_research_institute_2_read"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="3dp"
                    android:textColor="@android:color/white"
                    android:layout_toLeftOf="@id/tv_selected_research_institute_2_read_num"
                    android:text="@string/read"
                    />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="60dp">

        <TextView
            android:id="@+id/tv_deadline"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="我是有底线的"
            />

        <View
            android:layout_width="80dp"
            android:layout_height="1dp"
            android:background="#33333333"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/tv_deadline"
            android:layout_marginRight="16dp"
            />

        <View
            android:layout_width="80dp"
            android:layout_height="1dp"
            android:background="#33333333"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_deadline"
            android:layout_marginLeft="16dp"
            />
        </RelativeLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>